--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 *.iml
 .gradle
-/local.properties
-/.idea
+local.properties
+.idea
 .DS_Store
-/build
-/captures
+build
+release
+debug
+captures
 .externalNativeBuild
